# controller/coba.go
@@ -62,6 +62,17 @@ func GetPresensi(c *fiber.Ctx) error {
 		return c.JSON(ps)
 	}
 
+	// InsertDataPresensi godoc
+	// @Summary Insert data presensi.
+	// @Description Input data presensi.
+	// @Tags Presensi
+	// @Accept json
+	// @Produce json
+	// @Param request body Presensi true "Payload Body [RAW]"
+	// @Success 200 {object} Presensi
+	// @Failure 400
+	// @Failure 500
+	// @Router /ins [post]
 	func InsertDataPresensi(c *fiber.Ctx) error {
 		db := config.Ulbimongoconn
 		var presensi inimodel.Presensi
