# docs/swagger.yaml
@@ -70,6 +70,32 @@ info:
   title: Fiber Example API
   version: "1.0"
 paths:
+  /ins:
+    post:
+      consumes:
+      - application/json
+      description: Input data presensi.
+      parameters:
+      - description: Payload Body [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.Presensi'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Presensi'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Insert data presensi.
+      tags:
+      - Presensi
   /presensi:
     get:
       consumes:
